manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow-argocd
  labels:
    managed-by: argocd
    environment: test
