manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-demo
  labels:
    managed-by: argocd
