manifests/09-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-worker
  namespace: airflow-argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: airflow-worker
  template:
    metadata:
      labels:
        app: airflow-worker
    spec:
      securityContext:
        fsGroup: 50000
      containers:
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.2.4
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags-source
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
        - name: worker
          image: airflow-photoevent:1.1
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "-c"]
          args: ["airflow celery worker"]
          volumeMounts:
            - name: config
              mountPath: /opt/airflow/airflow.cfg
              subPath: airflow.cfg
            - name: dags
              mountPath: /opt/airflow/dags-source
              readOnly: true
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d celery@$(hostname)
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 2Gi
      volumes:
        - name: config
          configMap:
            name: airflow-config
        - name: dags
          emptyDir: {}
