manifests/03-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-demo
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
