manifests/04-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-redis
  namespace: airflow-argocd
spec:
  selector:
    app: airflow-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-redis
  namespace: airflow-argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-redis
  template:
    metadata:
      labels:
        app: airflow-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
